--- a/src/main.css
+++ b/src/main.css
@@ -1,35 +1,56 @@
 @import url('grid.css');
 
 :root {
-    --white: #fff;
-    --black: #1c1c1c;
-    --gray-light: #eee;
-    --gray: #bbb;
-    --gray-dark: #666;
-    /* pattypan colors */
-    --mustard: #D6AD0A;
-    --seagreen: #419d78;
-    --mauve: #90708C;
-    
+    --whitest: hsl(0, 0%, 100%);
+    --white: hsl(0, 2%, 97%);
+    --gray-lightest: hsl(0, 0%, 90%);
+    --gray-lighter: hsl(0, 0%, 80%);
+    --gray-light: hsl(0, 0%, 70%);
+    --gray: hsl(0, 0%, 50%);
+    --gray-dark: hsl(0, 0%, 40%);
+    --gray-darker: hsl(0, 0%, 30%);
+    --black: hsl(0, 0%, 10%);
+    --blackest: hsl(0, 0%, 0%);
+
+    --red: hsl(0, 75%, 50%);
+    --orange: hsl(30, 75%, 50%);
+    --yellow: hsl(48, 85%, 45%);
+    --green: hsl(137, 75%, 50%);
+    --blue: hsl(200, 90%, 50%);
+    --indigo: hsl(257, 90%, 50%);
+    --violet: hsl(274, 90%, 50%);
 
     /* vaporwave */
-    --light-blue: #A7D9F3;
-    --dark-blue: #096398;
-    --pink: #D083E8;
+    --blue-light: hsl(201, 76%, 80%);
+    --blue-dark: hsl(202, 89%, 32%);
+    --cyan: hsl(188, 54%, 55%);
+    --pink-light: hsl(285, 71%, 88%);
+    --pink: hsl(285, 71%, 66%);
 
+    --background: var(--white);
+    --primary: var(--violet);
+    --secondary: var(--pink);
+    --tertiary: var(--yellow);
 
-    --background: var(--dark);
-    --primary: var(--pink);
-    --secondary: var(--light-blue);
-    --tertiary: var(--dark-blue);
+    --text: var(--black);
+    --selection: var(--pink-light);
 
-    /* Other */
+    /* Font */
     --font-size: 16px;
+    --h1: 3rem;
+    --h2: 2.5rem;
+    --h3: 2rem;
+    --h4: 1.5rem;
+    --h5: 1.25rem;
+    --h6: 1.1rem;
+
+    /*  */
     --list-style: disc;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* Color Utilities // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 .primary {
     color: var(--primary);
 }
@@ -42,6 +63,34 @@
     color: var(--tertiary);
 }
 
+.red {
+    color: var(--red);
+}
+
+.orange {
+    color: var(--orange);
+}
+
+.yellow {
+    color: var(--yellow);
+}
+
+.green {
+    color: var(--green);
+}
+
+.blue {
+    color: var(--blue);
+}
+
+.indigo {
+    color: var(--indigo);
+}
+
+.violet {
+    color: var(--violet);
+}
+
 /* Main // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 html {
     font-size: var(--font-size);
@@ -49,11 +98,11 @@ html {
 }
 
 body {
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 1.6;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
-    color: var(--black);
+    color: var(--text-color);
 }
 
 /* Typography // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
@@ -69,32 +118,32 @@ h6 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: var(--h1);
     line-height: 1.2;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: var(--h2);
     line-height: 1.25;
 }
 
 h3 {
-    font-size: 2.5rem;
+    font-size: var(--h3);
     line-height: 1.3;
 }
 
 h4 {
-    font-size: 2.1rem;
+    font-size: var(--h4);
     line-height: 1.35;
 }
 
 h5 {
-    font-size: 1.65rem;
+    font-size: var(--h5);
     line-height: 1.5;
 }
 
 h6 {
-    font-size: 1.35rem;
+    font-size: var(--h6);
     line-height: 1.6;
 }
 
@@ -102,15 +151,22 @@ p {
     margin-top: 0;
 }
 
+::selection {
+    background: var(--selection);
+}
+
 /* Links // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 a {
     color: var(--primary);
     transition: all 250ms;
+    text-decoration-style: wavy;
+    font-weight: 600;
 }
 
 a:hover {
     color: var(--secondary);
 }
+
 
 /* Lists // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 ul {
@@ -144,7 +200,7 @@ code {
     margin: 0 .2rem;
     font-size: 90%;
     white-space: pre-wrap;
-    background: var(--gray-light);
+    background: var(--gray-lightest);
     color: var(--gray-dark);
 }
 
@@ -152,7 +208,6 @@ pre>code {
     display: block;
     padding: 1rem;
     white-space: pre-wrap;
-    border-top: 3px solid var(--secondary);
 }
 
 /* Forms // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
@@ -174,7 +229,11 @@ select {
     box-sizing: border-box;
 }
 
-/* Removes awkward default styles on some inputs for iOS */
+select[multiple] {
+    height: 6rem;
+    min-width: 10rem;
+}
+
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -222,6 +281,12 @@ fieldset {
 input[type="checkbox"],
 input[type="radio"] {
     display: inline;
+}
+
+/* decrease margin between options in a fieldset */
+fieldset input[type="checkbox"],
+fieldset input[type="radio"] {
+    margin-bottom: 0.5rem;
 }
 
 label>.label-body {
@@ -301,9 +366,9 @@ input[type="button"].button-primary:focus {
 /* Tables // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 th,
 td {
-    padding: 12px 15px;
+    padding: .8rem 1rem;
     text-align: left;
-    border-bottom: 1px solid var(--gray-light);
+    border-bottom: 1px solid var(--gray-lighter);
 }
 
 th:first-child,
@@ -344,17 +409,17 @@ form {
 
 /* Images // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 img {
-    padding: var(--gutter-width);
     max-width: 100%;
     height: auto;
+    overflow: hidden;
 }
 
-img.float-left {
+img.u-pull-left {
     margin-left: 0;
     margin-right: var(--gutter-width);
 }
 
-img.float-right {
+img.u-pull-right {
     margin-right: 0;
     margin-left: var(--gutter-width);
 }
@@ -368,17 +433,30 @@ hr {
 }
 
 blockquote {
-    padding: 0.25rem 0.25rem 0.25rem 1rem;
-    margin-left: 1.8rem;
-    background: var(--gray-light);
-    box-shadow: 5px 5px 0 var(--secondary);
+    padding: 0.4rem;
+    margin-left: 1.5rem;
+    background: var(--gray-lightest);
 }
 
 /* Utils // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
-.float-left {
-    float: left;
+
+/* Make element full width */
+.u-full-width {
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.float-right {
+/* Make sure elements don't run outside containers (great for images in columns) */
+.u-max-full-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+/* Float either direction */
+.u-pull-right {
     float: right;
+}
+
+.u-pull-left {
+    float: left;
 }
