--- a/src/main.css
+++ b/src/main.css
@@ -1,114 +1,110 @@
 :root {
-    --body-font: 'Poppins', sans-serif;
-    --heading-font: 'Poppins', sans-serif;
-    --whitest: hsl(0, 0%, 100%);
-    --white: hsl(0, 2%, 97%);
-    --gray-lightest: hsl(0, 0%, 90%);
-    --gray-lighter: hsl(0, 0%, 80%);
-    --gray-light: hsl(0, 0%, 70%);
-    --gray: hsl(0, 0%, 50%);
-    --gray-dark: hsl(0, 0%, 40%);
-    --gray-darker: hsl(0, 0%, 30%);
-    --black: hsl(0, 0%, 10%);
-    --blackest: hsl(0, 0%, 0%);
+  --body-font: "Poppins", sans-serif;
+  --heading-font: "Poppins", sans-serif;
 
-    --red: hsl(0, 75%, 50%);
-    --orange: hsl(33, 86%, 50%);
-    --yellow: hsl(52, 94%, 55%);
-    --green: hsl(137, 75%, 50%);
-    --blue: hsl(200, 90%, 50%);
-    --indigo: hsl(257, 90%, 50%);
-    --violet: hsl(274, 90%, 50%);
+  --red: hsl(0, 67%, 1%);
+  --orange: hsl(33, 86%, 50%);
+  --yellow: hsl(52, 94%, 55%);
+  --green: hsl(137, 75%, 50%);
+  --blue: hsl(200, 90%, 50%);
+  --indigo: hsl(257, 90%, 50%);
+  --violet: hsl(274, 90%, 50%);
 
-    /* vaporwave */
-    --blue-light: hsl(201, 76%, 80%);
-    --blue-dark: hsl(202, 89%, 32%);
-    --cyan: hsl(188, 54%, 55%);
-    --pink-light: hsl(285, 71%, 88%);
-    --pink: hsl(285, 71%, 66%);
+  /* vaporwave */
+  --blue-light: hsl(201, 76%, 80%);
+  --blue-dark: hsl(202, 89%, 32%);
+  --cyan: hsl(188, 54%, 55%);
+  --pink-light: hsl(285, 71%, 88%);
+  --pink: hsl(285, 71%, 66%);
 
-    --background: var(--white);
-    --primary: var(--violet);
-    --secondary: var(--pink);
-    --tertiary: var(--yellow);
+  --background: var(--white);
+  --primary: var(--violet-500);
+  --primary-light: var(--violet-300);
+  --primary-dark: var(--violet-700);
+  --secondary: var(--green-600);
+  --secondary-light: var(--green-400);
+  --secondary-dark: var(--green-800);
+  --tertiary: var(--orange-500);
+  --tertiary-light: var(--orange-300);
+  --tertiary-dark: var(--orange-700);
 
-    --text: var(--black);
-    --selection: var(--pink-light);
+  --text: var(--black);
+  --selection: var(--pink-light);
 
-    /* Font */
-    --font-size: 16px;
-    --h1: 3rem;
-    --h2: 2.5rem;
-    --h3: 2rem;
-    --h4: 1.5rem;
-    --h5: 1.25rem;
-    --h6: 1.1rem;
+  /* Font */
+  --font-size: 16px;
+  --h1: 3rem;
+  --h2: 2.5rem;
+  --h3: 2rem;
+  --h4: 1.5rem;
+  --h5: 1.25rem;
+  --h6: 1.1rem;
 
-    /*  */
-    --list-style: disc;
+  /*  */
+  --list-style: disc;
 }
 
 /* Color Utilities // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 .primary {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .secondary {
-    color: var(--secondary);
+  color: var(--secondary);
 }
 
 .tertiary {
-    color: var(--tertiary);
+  color: var(--tertiary);
 }
 
 .red {
-    color: var(--red);
+  color: var(--red);
 }
 
 .orange {
-    color: var(--orange);
+  color: var(--orange);
 }
 
 .yellow {
-    color: var(--yellow);
+  color: var(--yellow);
 }
 
 .green {
-    color: var(--green);
+  color: var(--green);
 }
 
 .blue {
-    color: var(--blue);
+  color: var(--blue);
 }
 
 .indigo {
-    color: var(--indigo);
+  color: var(--indigo);
 }
 
 .violet {
-    color: var(--violet);
+  color: var(--violet);
 }
 
 /* Main // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 html {
-    font-size: var(--font-size);
-    background-color: var(--background);
+  font-size: var(--font-size);
+  background-color: var(--background);
 }
 
 body {
-    font-size: 1rem;
-    min-height: 100vh;
-    line-height: 1.6;
-    font-weight: 400;
-    font-family: var(--body-font);
-    color: var(--text-color);
+  font-size: 1rem;
+  min-height: 100vh;
+  line-height: 1.6;
+  font-weight: 400;
+  font-family: var(--body-font);
+  color: var(--text-color);
 }
 
 section {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 section:last-of-type {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* Typography // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
@@ -118,117 +114,117 @@ h3,
 h4,
 h5,
 h6 {
-    margin-top: 0;
-    margin-bottom: 2rem;
-    font-weight: 600;
-    font-family: var(--heading-font);
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  font-family: var(--heading-font);
 }
 
 h1 {
-    font-size: var(--h1);
-    line-height: 1.2;
+  font-size: var(--h1);
+  line-height: 1.2;
 }
 
 h2 {
-    font-size: var(--h2);
-    line-height: 1.25;
+  font-size: var(--h2);
+  line-height: 1.25;
 }
 
 h3 {
-    font-size: var(--h3);
-    line-height: 1.3;
+  font-size: var(--h3);
+  line-height: 1.3;
 }
 
 h4 {
-    font-size: var(--h4);
-    line-height: 1.35;
+  font-size: var(--h4);
+  line-height: 1.35;
 }
 
 h5 {
-    font-size: var(--h5);
-    line-height: 1.5;
+  font-size: var(--h5);
+  line-height: 1.5;
 }
 
 h6 {
-    font-size: var(--h6);
-    line-height: 1.6;
+  font-size: var(--h6);
+  line-height: 1.6;
 }
 
 p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 ::selection {
-    background: var(--selection);
+  background: var(--selection);
 }
 
 /* Links // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 a {
-    color: var(--primary);
-    transition: all 250ms;
-    text-decoration: none;
-    font-weight: 600;
+  color: var(--primary);
+  transition: all 250ms;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 a:hover {
-    color: var(--secondary);
+  color: var(--secondary);
 }
 
 /* Nav // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 nav,
 nav ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-nav>*,
+nav > *,
 nav ul li {
-    list-style-type: none;
-    padding: 0 0.5rem;
+  list-style-type: none;
+  padding: 0 0.5rem;
 }
 
 /* Lists // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 ul {
-    list-style: var(--list-style) inside;
+  list-style: var(--list-style) inside;
 }
 
 ol {
-    list-style: decimal inside;
+  list-style: decimal inside;
 }
 
 ol,
 ul {
-    padding-left: 0;
-    margin-top: 0;
+  padding-left: 0;
+  margin-top: 0;
 }
 
 ul ul,
 ul ol,
 ol ol,
 ol ul {
-    margin: 0.75rem 0 .75rem 2rem;
+  margin: 0.75rem 0 0.75rem 2rem;
 }
 
 li {
-    margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 /* Code // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 code,
 pre {
-    padding: .1rem .35rem;
-    margin: 0 .2rem;
-    font-size: 90%;
-    white-space: pre-wrap;
-    background: var(--gray-lightest);
-    color: var(--gray-dark);
+  padding: 0.1rem 0.35rem;
+  margin: 0 0.2rem;
+  font-size: 90%;
+  white-space: pre-wrap;
+  background: var(--gray-lightest);
+  color: var(--gray-dark);
 }
 
-pre>code {
-    display: block;
-    padding: 1rem;
-    white-space: pre-wrap;
+pre > code {
+  display: block;
+  padding: 1rem;
+  white-space: pre-wrap;
 }
 
 /* Forms // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
@@ -241,18 +237,18 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-    height: 2.2rem;
-    padding: 0.2rem 0.3rem;
-    background-color: var(--white);
-    border: 1px solid #d1d1d1;
-    border-radius: 4px;
-    box-shadow: none;
-    box-sizing: border-box;
+  height: 2.2rem;
+  padding: 0.2rem 0.3rem;
+  background-color: var(--white);
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
 }
 
 select[multiple] {
-    height: 6rem;
-    min-width: 10rem;
+  height: 6rem;
+  min-width: 10rem;
 }
 
 input[type="email"],
@@ -263,15 +259,15 @@ input[type="tel"],
 input[type="url"],
 input[type="password"],
 textarea {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 textarea {
-    min-height: 5rem;
-    padding-top: .4rem;
-    padding-bottom: .4rem;
+  min-height: 5rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
 }
 
 input[type="email"]:focus,
@@ -283,37 +279,37 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-    border: 1px solid var(--primary);
-    outline: 0;
+  border: 1px solid var(--primary);
+  outline: 0;
 }
 
 label,
 legend {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: 600;
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
 }
 
 fieldset {
-    padding: 0;
-    border-width: 0;
+  padding: 0;
+  border-width: 0;
 }
 
 input[type="checkbox"],
 input[type="radio"] {
-    display: inline;
+  display: inline;
 }
 
 /* decrease margin between options in a fieldset */
 fieldset input[type="checkbox"],
 fieldset input[type="radio"] {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-label>.label-body {
-    display: inline-block;
-    margin-left: 0.5rem;
-    font-weight: normal;
+label > .label-body {
+  display: inline-block;
+  margin-left: 0.5rem;
+  font-weight: normal;
 }
 
 /* Buttons // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
@@ -323,24 +319,25 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-    display: inline-block;
-    height: 2.375rem;
-    padding: 0 1.875rem;
-    color: var(--gray-dark);
-    text-align: center;
-    font-size: .75rem;
-    font-weight: 600;
-    line-height: 2.375rem;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: var(--white);
-    border-radius: 4px;
-    border: 1px solid var(--gray);
-    cursor: pointer;
-    box-sizing: border-box;
-    transition: background-color 250ms, border 250ms, color 250ms, border-color 250ms;
+  display: inline-block;
+  height: 2.375rem;
+  padding: 0 1.875rem;
+  color: var(--gray-dark);
+  text-align: center;
+  font-size: 0.75rem;
+  font-weight: 600;
+  line-height: 2.375rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: var(--white);
+  border-radius: 4px;
+  border: 1px solid var(--gray);
+  cursor: pointer;
+  box-sizing: border-box;
+  transition: background-color 250ms, border 250ms, color 250ms,
+    border-color 250ms;
 }
 
 .button:hover,
@@ -353,9 +350,9 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-    color: var(--primary);
-    border-color: var(--primary);
-    outline: 0;
+  color: var(--primary);
+  border-color: var(--primary);
+  outline: 0;
 }
 
 .button.button-primary,
@@ -363,9 +360,9 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-    color: var(--white);
-    background-color: var(--primary);
-    border-color: var(--primary);
+  color: var(--white);
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .button.button-primary:hover,
@@ -378,42 +375,40 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-    color: var(--white);
-    background-color: var(--secondary);
-    border-color: var(--secondary);
+  color: var(--white);
+  background-color: var(--primary-light);
+  border-color: var(--primary-light);
 }
-
 
 /* Tables // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 th,
 td {
-    padding: .8rem 1rem;
-    text-align: left;
-    border-bottom: 1px solid var(--gray-lighter);
+  padding: 0.8rem 1rem;
+  text-align: left;
+  border-bottom: 1px solid var(--gray-lighter);
 }
 
 th:first-child,
 td:first-child {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 th:last-child,
 td:last-child {
-    padding-right: 0;
+  padding-right: 0;
 }
-
 
 /* Spacing // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 button,
 .button {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 input,
 textarea,
 select,
 fieldset {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 pre,
@@ -425,59 +420,59 @@ p,
 ul,
 ol,
 form {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 /* Images // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 img {
-    max-width: 100%;
-    height: auto;
-    overflow: hidden;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
 }
 
 img.u-pull-left {
-    margin-left: 0;
-    margin-right: var(--gutter-width);
+  margin-left: 0;
+  margin-right: var(--gutter-width);
 }
 
 img.u-pull-right {
-    margin-right: 0;
-    margin-left: var(--gutter-width);
+  margin-right: 0;
+  margin-left: var(--gutter-width);
 }
 
 /* Misc // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 hr {
-    margin-top: 3rem;
-    margin-bottom: 3.5rem;
-    border-width: 0;
-    border-top: 1px solid var(--gray-light);
+  margin-top: 3rem;
+  margin-bottom: 3.5rem;
+  border-width: 0;
+  border-top: 1px solid var(--gray-light);
 }
 
 blockquote {
-    padding: 0.4rem;
-    margin-left: 1.5rem;
-    background: var(--gray-lightest);
+  padding: 0.4rem;
+  margin-left: 1.5rem;
+  background: var(--gray-lightest);
 }
 
 /* Utils // =^.^= =^.^= =^.^= =^.^= =^.^= =^.^= */
 
 /* Make element full width */
 .u-full-width {
-    width: 100%;
-    box-sizing: border-box;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 /* Make sure elements don't run outside containers (great for images in columns) */
 .u-max-full-width {
-    max-width: 100%;
-    box-sizing: border-box;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 /* Float either direction */
 .u-pull-right {
-    float: right;
+  float: right;
 }
 
 .u-pull-left {
-    float: left;
+  float: left;
 }
